--- a/ace/details.html
+++ b/ace/details.html
@@ -184,10 +184,10 @@ the end of your handlebars.</p>
 	<footer>
 	      <p>Ace in the Hole Multisport Events, Copyright &copy; 2019</p>
 	        <div class="box">
-	          <a href="://http:www.facebook.com">
+	          <a href="http:www.facebook.com">
 	          <img src="./img/icons8-facebook-26.png">
 	        </a>
-	        <a href="://http:www.twitter.com">
+	        <a href="http:www.twitter.com">
 	        <img src="./img/icons8-twitter-30.png">
 	      </a>
 	          </div>
