--- a/ace/registration.html
+++ b/ace/registration.html
@@ -155,10 +155,10 @@
     <footer>
       <p>Ace in the Hole Multisport Events, Copyright &copy; 2019</p>
         <div class="box">
-          <a href="://http:www.facebook.com">
+          <a href="http:www.facebook.com">
           <img src="./img/icons8-facebook-26.png">
         </a>
-        <a href="://http:www.twitter.com">
+        <a href="http:www.twitter.com">
         <img src="./img/icons8-twitter-30.png">
       </a>
           </div>
