--- a/ace/details.html
+++ b/ace/details.html
@@ -30,7 +30,7 @@
       <li class="current"><a href="index.html">Home</a></li>
             <li><a href="details.html">Event Details</a></li>
             <li><a href="registration.html">Registration</a></li>
-              <li><a href="volunteers.html">Volunteers</a></li>
+              <li><a href="volunteers.html">Volunteers/Contact</a></li>
     </ul>
   </nav>
 
@@ -39,7 +39,7 @@
     <a href="index.html">Home</a>
     <a href="details.html">Event Details</a>
     <a href="registration.html">Registration</a>
-    <a href="volunteers.html">Volunteers</a>
+    <a href="volunteers.html">Volunteers/Contact</a>
   </div>
       </div>
     </header>
@@ -184,10 +184,10 @@ the end of your handlebars.</p>
 	<footer>
 	      <p>Ace in the Hole Multisport Events, Copyright &copy; 2019</p>
 	        <div class="box">
-	          <a href="http:www.facebook.com">
+	          <a href="http://www.facebook.com">
 	          <img src="./img/icons8-facebook-26.png">
 	        </a>
-	        <a href="http:www.twitter.com">
+	        <a href="http://www.twitter.com">
 	        <img src="./img/icons8-twitter-30.png">
 	      </a>
 	          </div>
