--- a/ace/volunteers.html
+++ b/ace/volunteers.html
@@ -30,7 +30,7 @@
       <li class="current"><a href="index.html">Home</a></li>
             <li><a href="details.html">Event Details</a></li>
             <li><a href="registration.html">Registration</a></li>
-              <li><a href="volunteers.html">Volunteers</a></li>
+              <li><a href="volunteers.html">Volunteers/Contact</a></li>
     </ul>
   </nav>
 
@@ -39,51 +39,77 @@
     <a href="index.html">Home</a>
     <a href="details.html">Event Details</a>
     <a href="registration.html">Registration</a>
-    <a href="volunteers.html">Volunteers</a>
+    <a href="volunteers.html">Volunteers/Contact</a>
   </div>
       </div>
     </header>
 
     <section id="showcase">
       <div class="container">
-        <h1>Volunteers</h1>
+        <h1>Volunteers / Contact</h1>
         <p>Enter information here and submit to volunteer for the event. Also in question/comment, state if you are an athlete, volunteer, or interested party. Confirmation email will be sent within 24 hours.</p>
       </div>
     </section>
 
-    <section id="boxes">
-      <div class="container">
          
-        <form action="registration_form.php" method="post">
-             <div class="bx1">
-    <label for="rname">Name</label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
-            </div>
-<div class="bx1">
-    <label for="re-mail">E-mail</label>
-    <input type="text" id="email" name="email" placeholder="Your e-mail..">
-            </div>
-            <div class="bx1">
-    <label for="event">Event</label>
-    <input type="text" id="event" name="event" placeholder="event..">
-            </div>
-            <div class="bx1">
-    <label for="comment">Info</label>
-    <textarea id="comment" name="comment">Question/Comment</textarea>
-            </div>
-            
-    <input type="submit" value="Submit">
-</form>
-      </div>
-    </section>
-
+		<main>
+		        <form name="contactform" method="post" action="send_form_email.php">
+		<table width="450px">
+		<tr>
+		 <td valign="top">
+		  <label for="first_name">First Name *</label>
+		 </td>
+		 <td valign="top">
+		  <input  type="text" name="first_name" maxlength="50" size="30">
+		 </td>
+		</tr>
+		    <tr>
+		 <td valign="top">
+		  <label for="first_name">Last Name *</label>
+		 </td>
+		 <td valign="top">
+		  <input  type="text" name="last_name" maxlength="50" size="30">
+		 </td>
+		</tr>
+		<tr>
+		 <td valign="top">
+		  <label for="email">Email Address *</label>
+		 </td>
+		 <td valign="top">
+		  <input  type="text" name="email" maxlength="80" size="30">
+		 </td>
+		</tr>
+		<tr>
+		 <td valign="top">
+		  <label for="telephone">Telephone Number</label>
+		 </td>
+		 <td valign="top">
+		  <input  type="text" name="telephone" maxlength="30" size="30">
+		 </td>
+		</tr>
+		<tr>
+		 <td valign="top">
+		  <label for="comments">Comments *</label>
+		 </td>
+		 <td valign="top">
+		  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+		 </td>
+		</tr>
+		<tr>
+		 <td colspan="2" style="text-align:center">
+		  <input type="submit" value="Submit"> 
+		 </td>
+		</tr>
+		</table>
+		</form>
+          </main>
     <footer>
       <p>Ace in the Hole Multisport Events, Copyright &copy; 2019</p>
         <div class="box">
-          <a href="http:www.facebook.com">
+          <a href="http://www.facebook.com">
           <img src="./img/icons8-facebook-26.png">
         </a>
-        <a href="http:www.twitter.com">
+        <a href="http://www.twitter.com">
         <img src="./img/icons8-twitter-30.png">
       </a>
           </div>
