--- a/ace/registration.html
+++ b/ace/registration.html
@@ -47,7 +47,7 @@
     <section id="showcase">
       <div class="container">
         <h1>Registration</h1>
-        <p>Enter information here and submit to register. Note Gender Identification (Female, Male, Non-binary) and any special accommodations you may require. Confirmation email will be sent within 24 hours.</p>
+        <p>Enter information here and submit to register. Please list gender identification (Female, Male, Non-binary) and any special accommodations you may require. Confirmation email will be sent shortly.</p>
       </div>
     </section>
        <main>
