--- a/ace/volunteers.html
+++ b/ace/volunteers.html
@@ -47,7 +47,7 @@
     <section id="showcase">
       <div class="container">
         <h1>Volunteers / Contact</h1>
-        <p>Enter information here and submit to volunteer for the event. Also in question/comment, state if you are an athlete, volunteer, or interested party. Confirmation email will be sent within 24 hours.</p>
+        <p>Enter information here and submit to volunteer for the event. Also in question/comment, state if you are an athlete, volunteer, or interested party. Confirmation email will be sent shortly.</p>
       </div>
     </section>
 
