--- a/ace/details.html
+++ b/ace/details.html
@@ -50,7 +50,7 @@
         <p>Ace in the Hole Multisport Events is proud to offer running and
 triathlon events to athletes of all shapes and sizes, national
 origins, gender identifications and cultural backgrounds. We offer
-Events for Every Body.</p>
+Events for Everyone.</p>
       </div>
     </section>
 <main>
