--- a/ace/index.html
+++ b/ace/index.html
@@ -51,7 +51,7 @@
         <p>Ace in the Hole Multisport Events is proud to offer running and
 triathlon events to athletes of all shapes and sizes, national
 origins, gender identifications and cultural backgrounds. We offer
-Events for Every Body.</p>
+Events for Everyone.</p>
       </div>
     </section>
       <main>
@@ -83,7 +83,11 @@ Events for Every Body.</p>
         <!-- gallery-photos -->
 
 </main>
-
+<a class="weatherwidget-io" href="https://forecast7.com/en/45d52n122d68/portland/" data-label_1="PORTLAND" data-label_2="WEATHER" data-theme="dark" >PORTLAND WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+      
     <footer>
         <p>Ace in the Hole Multisport Events, Copyright &copy; 2019</p>
           <div class="box">
