--- a/ace/details.html
+++ b/ace/details.html
@@ -59,7 +59,7 @@ Events for Everyone.</p>
         </span>
 
         <span id="caption">Starting Times</span>
-        <h3>Saturday</h3>
+        <h3>Saturday, 7 Sep 2019</h3>
       <table>
         <tr>
           <th id="coursename">course</th>
@@ -82,7 +82,7 @@ Events for Everyone.</p>
           <td headers="tourduration">7:15 am</td>
         </tr>
       </table>
-        <h3>Sunday</h3>  
+        <h3>Sunday, 8 Sep 2019</h3>  
       <table>
         <tr>
           <th id="coursename">course</th>
