--- a/ace/index.html
+++ b/ace/index.html
@@ -47,11 +47,11 @@
 
     <section id="showcase">
       <div class="container">
-        <h1>Ace in the Hole Multisport Events</h1>
+        <h1>Ace in the Hole Multisport Events</h1><h2> 7, 8 Sept 2019</h2>
         <p>Ace in the Hole Multisport Events is proud to offer running and
 triathlon events to athletes of all shapes and sizes, national
 origins, gender identifications and cultural backgrounds. We offer
-Events for Everyone.</p>
+events for everyone.</p>
       </div>
     </section>
       <main>
