--- a/ace/registration.html
+++ b/ace/registration.html
@@ -145,7 +145,7 @@
         </tr>
         <tr>
           <td headers="coursename">10K</td>
-          <td headers="tourduration">50</td>
+          <td headers="tourduration">$50</td>
         </tr>
           <tr>
           <td headers="coursename">Half Marathon</td>
